<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <item
        android:id="@+id/add_new"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_new"
        android:title="@string/new_icon"    
        android:showAsAction="always">
        
        <menu>
            <item
                android:id="@+id/add_new_safe_my"
                android:icon="@drawable/add_safe_my"
                android:orderInCategory="2"
                android:showAsAction="ifRoom|withText"
                android:title="@string/new_safe_my"/>
            
            <item
                android:id="@+id/add_new_safe_other"
                android:icon="@drawable/add_safe_other"
                android:orderInCategory="3"
                android:showAsAction="ifRoom|withText"
                android:title="@string/new_safe_other"/>
                       
            <item
                android:id="@+id/add_new_org"
                android:icon="@drawable/add_org"
                android:orderInCategory="4"
                android:showAsAction="ifRoom|withText"
                android:title="@string/new_org"/>
        </menu>
    </item>   
</menu>
